added html skeleton

--- a/index.html
+++ b/index.html
@@ -4,15 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alejandro Zuzueta's Concise Resume</title>
+    <title>Alejandro Zuzueta's Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 
 <body>
-  <div>
-      
+  <div id="left-column">
+      <h1 id="name" Alejandro Zuzueta>Alejandro Zuzueta</H1>
   </div>
+  <div id="profile">
+      <h2>Profile</h2> 
+      <p></p>
+      <p></p>
+  </div>
+  <div id="skills">
+      <h2>Skills</h2>
+      <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+      </ul>
+  </div>
+  <div id="contact">
+      <h2>Contact</h2>
+      <p Email: <a href="mailto:alejandro2244@maricopa.edu">alejandro2244@maricopa.edu </a> | Mobile: <a href="tel:1234567890">123-456-7890</a></P>
+  </div>
+  <div id="right-column">
+    <div id="Experience"  
+  experience
+  Education
     
 </body>
 </html>
