added info to index and css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alejandro Zuzueta's Resume</title>
     <link rel="stylesheet" href="style.css">
@@ -21,19 +20,35 @@
   <div id="skills">
       <h2>Skills</h2>
       <ul>
-          <li></li>
+          <li>Software: Google Suites (Sheets, Docs, Slides, and Gmail), Microsoft 365 (Excel, Word, PowerPoint, and Outlook)</li>
           <li></li>
           <li></li>
       </ul>
   </div>
   <div id="contact">
       <h2>Contact</h2>
-      <p Email: <a href="mailto:alejandro2244@maricopa.edu">alejandro2244@maricopa.edu </a> | Mobile: <a href="tel:1234567890">123-456-7890</a></P>
+      <p>Email: alejandro2244@maricopa.edu | Mobile: 123-456-7890</P>
   </div>
   <div id="right-column">
-    <div id="Experience"  
-  experience
-  Education
-    
+    <div id="Experience">
+        <h2>Experience</h2>
+        <h3>Grubhub - Driver Care</h3>
+        <p class="date">September 2018 - March 2019</p>
+        <p>As a Driver Care Representative I frequently spoke with restaurants, customers, and drivers alike in order to quickly solve various issues to get the customer their food as fast as possible.</p>
+        <h3>Discover Card - Fraud Specialist</h3>
+        <p class="date">March 2019 - June 2021</p>
+        <p>As a Fraud Specialist I would meticulously balance accounts and research, with support of the merchant, whether or not the suspected fraud was valid and credit accounts accordingly</p>
+        <h3> <a target="_blank" href="http://127.0.0.1:5500/index.html">For The Culture Website</a></h3>
+        <p>A collaborative project showcasing our favorite music artists.</p>
+    </div>
+  </div>
+  <div id="education">
+      <h2>Education</h2>
+      <h3>Glendale High School</h3>
+      <p class="date">2017 Alumni</p>
+      <h3>Gateway Community College</h3>
+      <p class="date">2022 - Present</p>
+  </div>
 </body>
+
 </html>
