--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
       <h2>Skills</h2>
       <ul>
           <li>Software: Google Suites (Sheets, Docs, Slides, and Gmail), Microsoft 365 (Excel, Word, PowerPoint, and Outlook)</li>
-          <li></li>
-          <li></li>
+          <li>Programming: HTML and CSS</li>
+          <li>Teamwork and time management</li>
+          <li>Problem Solving</li>
+          <li>Effective Communication; Verbally and Written</li>
       </ul>
   </div>
   <div id="contact">
@@ -37,8 +39,8 @@
         <p>As a Driver Care Representative I frequently spoke with restaurants, customers, and drivers alike in order to quickly solve various issues to get the customer their food as fast as possible.</p>
         <h3>Discover Card - Fraud Specialist</h3>
         <p class="date">March 2019 - June 2021</p>
-        <p>As a Fraud Specialist I would meticulously balance accounts and research, with support of the merchant, whether or not the suspected fraud was valid and credit accounts accordingly</p>
-        <h3> <a target="_blank" href="http://127.0.0.1:5500/index.html">For The Culture Website</a></h3>
+        <p>As a Fraud Specialist I would meticulously balance accounts and research, with support of the merchant, whether or not the suspected fraud was valid and credit accounts accordingly.</p>
+        <h3> <a target="_blank" href="https://github.com/AlejandroZuzueta/For-The-Culture.git">For The Culture Website</a></h3>
         <p>A collaborative project showcasing our favorite music artists.</p>
     </div>
   </div>
