--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 
 <body>
   <div id="left-column">
-      <h1 id="name" Alejandro Zuzueta>Alejandro Zuzueta</H1>
-  </div>
+    <h1>Alejandro Zuzueta</h1>
   <div id="profile">
       <h2>Profile</h2> 
-      <p></p>
-      <p></p>
+      <p>Enthusiastic web developer looking to progress and hone my skills to create the best possible websites and expand my overall knowledge in the tech space. </p>
   </div>
+  <!--END OF PROFILE-->
   <div id="skills">
       <h2>Skills</h2>
       <ul>
@@ -27,30 +26,37 @@
           <li>Effective Communication; Verbally and Written</li>
       </ul>
   </div>
-  <div id="contact">
-      <h2>Contact</h2>
-      <p>Email: alejandro2244@maricopa.edu | Mobile: 123-456-7890</P>
+  <!--END OF SKILLS-->
+  <div id="education">
+    <h2>Education</h2>
+    <h3>Glendale High School</h3>
+    <p class="date">2017 Alumni</p>
+    <h3>Gateway Community College</h3>
+    <p class="date">2022 - Present</p>
   </div>
+<!--END OF EDUCATION-->
+  </div>
+  <!--END OF LEFT COLUMN-->
   <div id="right-column">
     <div id="Experience">
         <h2>Experience</h2>
-        <h3>Grubhub - Driver Care</h3>
-        <p class="date">September 2018 - March 2019</p>
-        <p>As a Driver Care Representative I frequently spoke with restaurants, customers, and drivers alike in order to quickly solve various issues to get the customer their food as fast as possible.</p>
+        <h3> <a target="_blank" href="https://alejandrozuzueta.github.io/For-The-Culture/">For The Culture Website</a></h3>
+        <p class="date">February 2022</p>
+        <p>A collaborative project showcasing our favorite music artists.</p>
         <h3>Discover Card - Fraud Specialist</h3>
         <p class="date">March 2019 - June 2021</p>
         <p>As a Fraud Specialist I would meticulously balance accounts and research, with support of the merchant, whether or not the suspected fraud was valid and credit accounts accordingly.</p>
-        <h3> <a target="_blank" href="https://github.com/AlejandroZuzueta/For-The-Culture.git">For The Culture Website</a></h3>
-        <p>A collaborative project showcasing our favorite music artists.</p>
+        <h3>Grubhub - Driver Care</h3>
+        <p class="date">September 2018 - March 2019</p>
+        <p>As a Driver Care Representative I frequently spoke with restaurants, customers, and drivers alike in order to quickly solve various issues to get the customer their food as fast as possible.</p>
     </div>
+    <!--END OF EXPERIENCE-->
+    <div id="contact">
+        <h2>Contact</h2>
+        <p><a href="mailto:alejandro2244@maricopa.edu">alejandro2244@maricopa.edu</a> | <a href="tel:1234567890">123-456-7890</a></P>
+    </div>
+    <!--END OF CONTACT-->
   </div>
-  <div id="education">
-      <h2>Education</h2>
-      <h3>Glendale High School</h3>
-      <p class="date">2017 Alumni</p>
-      <h3>Gateway Community College</h3>
-      <p class="date">2022 - Present</p>
-  </div>
+  <!--END OF RIGHT COLUMN-->
 </body>
-
 </html>
